changed num of columns to 4, changed common card size and centered the list.

--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
   "expo": {
+    "scheme": "jikan",
     "name": "jikan",
     "slug": "jikan",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "web": {
+      "bundler": "metro"
+    }
   },
   "name": "jikan"
 }
