--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.3.1",
     "expo": "~47.0.12",
+    "expo-constants": "^14.0.2",
+    "expo-linking": "^3.3.0",
+    "expo-router": "^1.0.0-rc6",
     "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
+    "expo-status-bar": "^1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
